[tool.poetry]
name        = "yapt"
version     = "1.2.0"
description = "yet another python (project) template"
authors     = ["Caian Ertl <hi@caian.org>"]
license     = "CC0-1.0"
homepage    = "https://github.com/caian-org/yapt"
repository  = "https://github.com/caian-org/yapt"
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers

    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black                  = "21.12b0"
jedi                   = "0.18.1"
watchdog               = "2.1.6"
mypy                   = "0.930"
pylint                 = "2.12.2"
pytest                 = "6.2.5"
pytest-cov             = "3.0.0"
pytest-sugar           = "0.9.4"
vrelease-bin           = "0.3.2"
sphinx                 = "4.3.2"
sphinxcontrib-napoleon = "0.7"
sphinx-book-theme      = "0.1.7"
poethepoet             = "0.11.0"

[tool.poe.tasks]
"start"       = "python -m yapt"
"start:watch" = "watchmedo auto-restart -p '*.py' -R python -- -m yapt"
"build:docs"  = "sphinx-build .docs .docs/build"
"fix:style"   = "black -l 100 -S yapt"
"check:lint"  = "pylint --fail-under 9 --rcfile .pylintrc --output-format colorized --verbose yapt"
"check:types" = "mypy yapt"
"check:style" = "black -l 100 -S --check yapt"
"tests"       = "pytest --cov yapt --cov-report term --cov-report html --cov-report xml --verbose"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
