[tool.poetry]
name        = "yapt"
version     = "1.2.0"
description = "yet another python (project) template"
authors     = ["Caian Ertl <hi@caian.org>"]
license     = "CC0-1.0"
homepage    = "https://github.com/caian-org/yapt"
repository  = "https://github.com/caian-org/yapt"
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers

    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
bandit                 = "1.7.2"
black                  = "21.12b0"
colorama               = "0.4.4"
isort                  = "5.10.1"
jedi                   = "0.18.1"
mypy                   = "0.930"
poethepoet             = "0.11.0"
pylint                 = "2.12.2"
pytest                 = "6.2.5"
pytest-cov             = "3.0.0"
pytest-sugar           = "0.9.4"
sphinx                 = "4.3.2"
sphinx-book-theme      = "0.1.7"
sphinxcontrib-napoleon = "0.7"
vrelease-bin           = "0.3.2"
watchdog               = "2.1.6"

[tool.poe.tasks]
"start"          = "python -m yapt"
"start:watch"    = "watchmedo auto-restart -p '*.py' -R python -- -m yapt"
"build:docs"     = "sphinx-build .docs .docs/build"
"check:lint"     = "pylint --fail-under 9 --rcfile .pylintrc --output-format colorized --verbose yapt"
"check:security" = "bandit --exclude yapt/tests -r yapt"
"check:style"    = "black -l 100 -S --check yapt"
"check:types"    = "mypy yapt"
"fix:imports"    = "isort --sl yapt/**/*.py"
"fix:style"      = "black -l 100 -S yapt"
"tests"          = "pytest --cov yapt --cov-report term --cov-report html --cov-report xml --verbose"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
