[tool.poetry]
name        = "docs"
version     = "1.0.0"
description = "yapt documentation"
authors     = ["Caian Ertl <hi@caian.org>"]
license     = "CC0-1.0"
homepage    = "https://github.com/caian-org/yapt"
repository  = "https://github.com/caian-org/yapt"

[tool.poetry.dependencies]
python                          = "^3.8"
mkdocs                          = "1.3.0"
mkdocs-git-revision-date-plugin = "0.3.2"
mkdocs-material                 = "8.2.9"
mkdocs-mermaid2-plugin          = "0.5.2"
mkdocs-minify-plugin            = "0.5.0"
mkdocstrings                    = "0.18.1"

[tool.poetry.dev-dependencies]
poethepoet = "0.13.1"

[tool.poe.tasks]
"docs:build" = "mkdocs build"
"docs:serve" = "mkdocs serve"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
